<resources>
    <string name="app_name">La Nevera de GePeTo</string>
    <string name="user_string">user</string>
    <string name="password_string">password</string>
    <string name="tv_login">Login</string>
    <string name="valid_user_msg">Credentials valid!</string>
    <string name="invalid_user_msg">Credentials no valid</string>
    <string name="tv_register">join</string>
    <string name="repeat_password">Repite la Contraseña</string>
    <string name="visit_website">trakt.tv</string>
    <string name="greeting">Hello, %s!</string>
    <string name="recetas_option">Recetas</string>
    <string name="lista_option">Lista</string>
    <string name="equipamiento_option">Equipamiento</string>
    <string name="favoritas_option">Favoritas</string>
    <string name="ingredientes_option">Crear Receta</string>
    <string name="observaciones_option">Observaciones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">settings</string>
    <string name="action_search">search</string>
    <string name="crear_receta">Crear Receta</string>
    <string name="buscar_ingrediente">Buscar Ingrediente:</string>
    <string name="switch_label">Generar mediante IA</string>
    <string name="ingredientes_seleccionados">Ingredientes seleccionados:</string>
    <string name="todos_los_ingredientes">Todos los ingredientes:</string>
    <string name="buscar_equipamiento">Buscar equipamiento:</string>
    <string name="equipamientos_seleccionados">Equipamientos seleccionados:\n</string>
    <string name="todos_los_equipamientos">Todos los equipamientos:</string>
    <string name="advertencia_label">Debe introducrise al menos un ingrediente.</string>
    <string name="preview_de_la_receta">Preview de la receta</string>
    <string name="me_gusta_alt_label">Me Gusta</string>
    <string name="login_header">Preferencias de login</string>
    <string name="autologin_title">Recordar mi usuario</string>
    <string name="username_title">user</string>
    <string name="password_title">password</string>
    <string name="suggestions_header">Cajón de sugerencias</string>
    <string name="suggestions_title">Sugerencia</string>
    <string name="send_suggestion_title">Enviar sugerencia</string>
    <string name="reset_suggestion_title">Resetear sugerencia</string>
    <string name="edit_suggestion_title">Escribir sugerencia</string>
    <string name="crear_receta_button">Crear Receta</string>
    <string name="recuperar">Recuperar</string>
    <string name="recuperar_password">Recuperar contraseña</string>
    <string name="introduce_tu_contraseña">Introduce tu Contraseña</string>
    <string name="pwd_txt">Contraseña</string>
    <string name="introduce_tu_usuario">Introduce tu Usuario</string>
    <string name="user_txt">Usuario</string>
    <string name="login">Inicia Sesión</string>
    <string name="titulo">La Nevera de \nGePeTo</string>
    <string name="register">Registrarse</string>
    <string name="nueva_contraseña">Nueva Contraseña</string>
    <string name="introduce_tu_nueva_contraseña">Introduce tu nueva Contraseña</string>
    <string name="restaurar">Restaurar</string>
    <string name="Restore">Recuperar Contraseña</string>
    <string name="no_hay_recetas">No existen Recetas</string>
    <string name="no_hay_favortias">No existen Favoritos</string>
    <string name="buscar_receta">Buscar receta:</string>
    <string name="buscar_favorita">Buscar favoritas:</string>
</resources>