<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/titulo"
        android:layout_width="419dp"
        android:layout_height="225dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="200dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_txt"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            android:hint="@string/introduce_tu_usuario"/>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/pwd_txt"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:textColor="@color/gray"
            android:hint="@string/introduce_tu_contraseña"
            android:autofillHints="" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/bt_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#87cedb"
                android:text="@string/tv_login"
                android:textAllCaps="false"
                android:textColor="#2A2929"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/bt_register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="#fab30b"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#2A2929"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle" />


        </LinearLayout>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recuperar_password"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginTop="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:gravity="center">

            <Button
                android:id="@+id/bt_restore"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#bfbf73"
                android:text="@string/recuperar"
                android:textAllCaps="false"
                android:textColor="#2A2929"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>